2005-11-21  Dariush Molavi  <dari@nukedgallery.net>
	* Fix: Oops, deleted the init() function wrapper from 
	  modules/gallery2/admin/index.php.  Re-added.

2005-11-16  Dariush Molavi  <dari@nukedgallery.net>
	* New: New popup window when exporting PHPNuke users
	  to Gallery 2.  Displays a progress bar to show how 
	  many users have been synced.  This is a port of the
	  user sync code from the phpBB2 integration.
	* Fix: Better error handling with initial user sync.  This
	  should resolve most user's issues with collisions.
	* New: Code to add to the PHPNuke Account module to 
	  create a new Gallery 2 user when the user activates 
	  their PHPNuke account.
	* Change: Cleaned up code, removed un-needed functions.

2005-10-31  Dariush Molavi  <dari@nukedgallery.net>
	* Change: Updated PHPNuke ACP with non-Alpha Gallery 
	  banner.
	* Fix: Re-added g2addexternalMapEntry() function to 
	  index.php.

2005-10-25  Dariush Molavi  <dari@nukedgallery.net>
	* Change: Updated Readme with explicit instructions that 
	  Gallery 2 must be installed in the modules directory.

2005-09-28  Dariush Molavi  <dari@nukedgallery.net>
	* Fix: Typo in one of the filenames.
	* Change: Updated title to final release.

2005-09-22  Dariush Molavi  <dari@nukedgallery.net>
	* New: Portuguese language files. Thanks to netmen.

2005-09-22  Dariush Molavi  <dari@nukedgallery.net>
	* New: Italian language files. Thanks to Emanuele De Angelis.

2005-09-20  Dariush Molavi  <dari@nukedgallery.net>
	* New: German language file added. Thanks to fulbrich.
	* Change: Modified ChangeLog format.

2005-09-12  Dariush Molavi  <dari@nukedgallery.net>
	* Fix: Fixed two hardcoded admin.php references (thanks DavePC).

2005-08-30  Dariush Molavi  <dari@nukedgallery.net>
	* New: Added Spanish language files (translated by 
	  Diego Vego).

2005-08-25  Dariush Molavi  <dari@nukedgallery.net>
	* Fix: Minor CSS tweaks and alignment fixes in readme.

2005-08-25  Dariush Molavi  <dari@nukedgallery.net>