@@ -293,6 +293,13 @@
 		proceed with this integration, you <b>must</b> install and configure Gallery 2.  Additionally, Gallery 2 <b>must</b>
 		be installed into the "modules" directory of your PHPNuke installation.
 		</p></div>
+		<br />
+		<div class="important">
+		<h3>IMPORTANT</h3>
+		<p>
+		The use of the Gallery 2 rewrite module in an integrated environment has proven to be a tricky task.  It is highly 
+		recommended that you deactivate the Gallery 2 rewrite module prior to attempting this integration.
+		</p></div>
 		<p>
 		This package contains four folders:
 		<ul>
